@@ -1,3 +1,8 @@
+2017-01-27 Robert Wolff <robert.wolff@cern.ch>
+	* add ChargeIDSelectorTool output to flat lepton branches
+	* Add PromptLepton* variables to flat lepton branches
+	* uncomment obsolete Madgraph and Pythia V+jets samples
+
 2017-01-26 Robert Wolff <robert.wolff@cern.ch>
 	* use AnalysisTop 2.4.25
 
